[package]
name = "jni_macros"
version = "0.1.0"
authors = ["Patrick Amrein <amrein@ubique.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.46"
quote = "1.0"
proc-macro2 = "1.0.24"
Inflector = "0.11.4"
[lib]
proc-macro = true